--- a/src/styles/LogButton.css
+++ b/src/styles/LogButton.css
@@ -7,11 +7,17 @@
     font-size: calc(4px + 2vmin);
     padding: 15px 30px;
     border: none;
-    border-radius: 8px;
+    font-weight: bold;
     color: darkslategray;
 }
 
 .log-button:hover {
-    background-color:#eeffa0;
+    background-color:#f7ffd3;
     color: rgb(32, 51, 51);
+}
+
+.log-button:active {
+    background-color: #f7ffd3;
+    color: rgb(32, 51, 51);
+    border: 2px solid #d8fa43;
 }
