--- a/src/styles/LogButton.css
+++ b/src/styles/LogButton.css
@@ -1,23 +1,25 @@
-.log-button {
+.Log-button {
+    align-items: center;
     background-color: #d8fa43;
+    border: none;
+    border-radius: 8px;
+    color: darkslategray;
+    cursor: pointer;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
     font-size: calc(4px + 2vmin);
-    padding: 15px 30px;
-    border: none;
     font-weight: bold;
-    color: darkslategray;
+    justify-content: center;
+    padding: 15px 30px;
 }
 
-.log-button:hover {
+.Log-button:hover {
     background-color:#f7ffd3;
     color: rgb(32, 51, 51);
 }
 
-.log-button:active {
+.Log-button:active {
     background-color: #f7ffd3;
-    color: rgb(32, 51, 51);
     border: 2px solid #d8fa43;
+    color: rgb(32, 51, 51);
 }
