--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,3 +1,19 @@
 .App {
     text-align: center;
 }
+
+.App-header {
+    align-items: center;
+    background-color: #282c34;
+    color: rgb(209, 209, 209);
+    display: flex;
+    flex-direction: column;
+    font-size: calc(10px + 2vmin);
+    font-weight: bold;
+    justify-content: center;
+    min-height: 100vh;
+}
+
+.App-title {
+    font-size: calc(30px + 2vmin);
+}
