--- a/src/styles/LogButton.css
+++ b/src/styles/LogButton.css
@@ -1,25 +1,28 @@
 .Log-button {
     align-items: center;
-    background-color: #d8fa43;
+    background-color: #ffffff;
     border: none;
-    border-radius: 8px;
-    color: darkslategray;
+    border-radius: 500px;
+    color: #030a01;
     cursor: pointer;
     display: flex;
     flex-direction: column;
-    font-size: calc(4px + 2vmin);
+    font-size: 16px;
     font-weight: bold;
     justify-content: center;
-    padding: 15px 30px;
+    padding: 14px 32px;
+    text-decoration: none;
 }
 
 .Log-button:hover {
-    background-color:#f7ffd3;
-    color: rgb(32, 51, 51);
+    background-color:#f6f6f6;
+    color: #030a01;
+    text-decoration: none;
 }
 
 .Log-button:active {
-    background-color: #f7ffd3;
-    border: 2px solid #d8fa43;
-    color: rgb(32, 51, 51);
+    background-color: #ededed;
+    border: 2px solid #ffffff;
+    color: #030a01;
+    text-decoration: none;
 }
